--- a/mods/moonlight.pw.toml
+++ b/mods/moonlight.pw.toml
@@ -1,13 +1,13 @@
 name = "Moonlight Lib"
-filename = "moonlight-1.20-2.8.56-fabric.jar"
+filename = "moonlight-1.20-2.8.65-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/twkfQtEc/versions/KJQ6UUBP/moonlight-1.20-2.8.56-fabric.jar"
+url = "https://cdn.modrinth.com/data/twkfQtEc/versions/Fc74Sq3o/moonlight-1.20-2.8.65-fabric.jar"
 hash-format = "sha1"
-hash = "a200269748e0e2eb65049ec1df84071a589453d0"
+hash = "b1962691ec4217a5c8de48edbe8a9d8caa2c9590"
 
 [update]
 [update.modrinth]
 mod-id = "twkfQtEc"
-version = "KJQ6UUBP"
+version = "Fc74Sq3o"
