--- a/mods/nvidium.pw.toml
+++ b/mods/nvidium.pw.toml
@@ -1,13 +1,13 @@
 name = "Nvidium"
-filename = "nvidium-0.1.15-alpha.jar"
+filename = "nvidium-0.2.3-beta.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/SfMw2IZN/versions/WJV4pTzp/nvidium-0.1.15-alpha.jar"
+url = "https://cdn.modrinth.com/data/SfMw2IZN/versions/ETg31Z6e/nvidium-0.2.3-beta.jar"
 hash-format = "sha1"
-hash = "50ae8447dd0602936bd431ed70a81b1211bc2753"
+hash = "12bff31eb6107e8ba6efc41468a4012c0b1aac57"
 
 [update]
 [update.modrinth]
 mod-id = "SfMw2IZN"
-version = "WJV4pTzp"
+version = "ETg31Z6e"
